kubernetes/clusters/home/media/audioookshelf/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: media

spec:
  selector:
    app: audiobookshelf

  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: 80

  type: ClusterIP
